--- a/meson_options.txt
+++ b/meson_options.txt
@@ -196,7 +196,7 @@ option(
   value : ['auto'],
   choices : ['auto', 'amd', 'broadcom', 'freedreno', 'intel', 'intel_hasvk',
              'panfrost', 'swrast', 'imagination-experimental',
-             'microsoft-experimental', 'virtio-experimental'],
+             'microsoft-experimental', 'virtio-experimental', 'rvgpu'],
   description : 'List of vulkan drivers to build. If this is set to auto ' +
                 'all drivers applicable to the target OS/architecture ' +
                 'will be built'
