--- a/src/meson.build
+++ b/src/meson.build
@@ -82,6 +82,9 @@ endif
 if with_gallium_radeonsi or with_amd_vk or with_gallium_r300 or with_gallium_r600
   subdir('amd')
 endif
+if with_rvgpu_vk
+  subdir('rvgpu')
+endif
 if with_any_broadcom
   subdir('broadcom')
 endif
