fix: add rvgpu_winsys.c to compiler file

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -35,6 +35,7 @@ rvgpu_files = files(
     'rvgpu_instance.c',
     'rvgpu_physical_device.c',
     'rvgpu_perfcounter.c',
+    'rvgpu_winsys.c',
     'rvgpu_wsi.c'
 )
 
