rvgpu: add rvgpu_queue_init function

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -36,6 +36,7 @@ rvgpu_files = files(
     'rvgpu_instance.c',
     'rvgpu_physical_device.c',
     'rvgpu_perfcounter.c',
+    'rvgpu_queue.c',
     'rvgpu_winsys.c',
     'rvgpu_cmd_buffer.c',
     'rvgpu_wsi.c'
