rvgpu: add interface of vkAllocateMemory

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -38,6 +38,7 @@ rvgpu_files = files(
     'rvgpu_perfcounter.c',
     'rvgpu_image.c',
     'rvgpu_buffer.c',
+    'rvgpu_device_memory.c',
     'rvgpu_formats.c',
     'rvgpu_queue.c',
     'rvgpu_winsys.c',
