rvgpu: add function rvgpu_winsys_bo_create

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -42,6 +42,7 @@ rvgpu_files = files(
     'rvgpu_formats.c',
     'rvgpu_queue.c',
     'rvgpu_winsys.c',
+    'rvgpu_winsys_bo.c',
     'rvgpu_cmd_buffer.c',
     'rvgpu_wsi.c'
 )
