rvgpu: add rvgpu_winsys_surface_init

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -43,6 +43,7 @@ rvgpu_files = files(
     'rvgpu_queue.c',
     'rvgpu_winsys.c',
     'rvgpu_winsys_bo.c',
+    'rvgpu_winsys_surface.c',
     'rvgpu_cmd_buffer.c',
     'rvgpu_wsi.c'
 )
