feat: add compiler shader

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -46,6 +46,9 @@ rvgpu_files = files(
     'rvgpu_descriptor_set.c',
     'rvgpu_pipeline.c',
     'rvgpu_pipeline_graphics.c',
+    'rvgpu_lower.c',
+    'rvgpu_lower_vulkan_resource.c',
+    'rvgpu_lower_inline_uniforms.c',
     'rvgpu_wsi.c'
 )
 
