fix: init the pdevice->supported_sync_types which refer to imagenation
Signed-off-by: Zhang Jingdan <344486203@qq.com>

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -50,7 +50,8 @@ rvgpu_files = files(
     'rvgpu_lower_vulkan_resource.c',
     'rvgpu_lower_inline_uniforms.c',
     'rvgpu_wsi.c',
-    'rvgpu_execute.c'
+    'rvgpu_execute.c',
+    'rvgpu_sync.c'
 )
 
 rvgpu_flags = [
