feat: add file rvgpu_shader.c

--- a/src/rvgpu/vulkan/meson.build
+++ b/src/rvgpu/vulkan/meson.build
@@ -54,7 +54,8 @@ rvgpu_files = files(
     'rvgpu_lower_inline_uniforms.c',
     'rvgpu_wsi.c',
     'rvgpu_execute.c',
-    'rvgpu_sync.c'
+    'rvgpu_sync.c',
+    'rvgpu_shader.c'
 )
 
 rvgpu_flags = [
