feat: translate load_const nir
Signed-off-by: Zhang Jingdan <max@sietium.com>

--- a/src/rvgpu/llvm/meson.build
+++ b/src/rvgpu/llvm/meson.build
@@ -21,6 +21,7 @@
 rvgpu_common_llvm_files = files(
   'rc_llvm_util.cpp',
   'rc_llvm_build.cpp',
+  'rc_nir_to_llvm.cpp',
 )
 
 librvgpu_common_llvm = static_library(
