--- a/meson_options.txt
+++ b/meson_options.txt
@@ -477,7 +477,7 @@ option(
   type : 'array',
   value : [],
   choices : ['drm-shim', 'etnaviv', 'freedreno', 'glsl', 'intel', 'intel-ui',
-             'nir', 'nouveau', 'lima', 'panfrost', 'asahi', 'imagination',
+             'nir', 'nouveau', 'lima', 'panfrost', 'asahi', 'imagination', 'rvgpu',
              'all', 'dlclose-skip'],
   description : 'List of tools to build. (Note: `intel-ui` selects `intel`)',
 )
